--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "mazhekin",
   "license": "MIT",
   "devDependencies": {
+    "rollup": "^4.17.2",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.4.5"
   }
 }
