--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "type": "git",
     "url": "https://github.com/mazhekin/greeting_package"
   },
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
   "author": "mazhekin",
   "license": "MIT",
