--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "url": "https://github.com/mazhekin/greeting_package"
   },
   "type": "module",
-  "main": "index.js",
+  "main": "lib/index.cjs",
+  "exports": {
+    "import": {
+      "default": "./lib/index.esm.js",
+      "types": "./types/index.d.ts"
+    },
+    "require": {
+      "default": "./lib/index.cjs",
+      "types": "./types/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "rollup -c"
   },
