add scope name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "greeting_package",
+  "name": "@mazhekin/greeting-package",
   "version": "1.0.0",
   "description": "This package is for greeting a person during the day",
   "repository": {
