--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "mazhekin",
   "license": "MIT",
   "devDependencies": {
+    "@changesets/cli": "^2.27.11",
     "rollup": "^4.17.2",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-typescript2": "^0.36.0",
