--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "link-package": "npm link",
     "unlink-package": "npm unlink -g",
     "npm-root-folder": "npm root -g",
-    "enter-pre-release-mode": "npx changeset pre enter alpha"
+    "enter-pre-release-mode": "npx changeset pre enter alpha",
+    "exit-pre-release-mode": "npx changeset pre exit"
   },
   "author": "mazhekin",
   "license": "MIT",
